[tool.poetry]
name = "pfm"
version = "0.6.0"
description = ""
authors = ["Takahiko Ito <takahiko03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Click = "^6.0"
texttable = "^1.0"

[tool.poetry.dev-dependencies]
toml = "^0.10.0"
flake8 = "2.6.0"

[tool.poetry.scripts]
pfm ='pfm.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
